fix: Wrap link with A tag

--- a/sass/templates/notice.module.scss
+++ b/sass/templates/notice.module.scss
@@ -5,6 +5,7 @@
     padding-right: 17px;
     >span {
         display: block;
+        color: colors.$primary-300;
     }
 }
 
